--- a/Model/OnlineShopModel.csproj
+++ b/Model/OnlineShopModel.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
     <Compile Include="Common\Encryptor.cs" />
     <Compile Include="DAO\AccountDAO.cs" />
+    <Compile Include="DAO\ContentDAO.cs" />
+    <Compile Include="DAO\NewsCategoryDAO.cs" />
     <Compile Include="EF\About.cs" />
     <Compile Include="EF\Account.cs" />
     <Compile Include="EF\CategoryNew.cs" />
