--- a/Model/OnlineShopModel.csproj
+++ b/Model/OnlineShopModel.csproj
@@ -75,15 +75,24 @@
     <Compile Include="EF\Slide.cs" />
     <Compile Include="EF\SystemConfig.cs" />
     <Compile Include="EF\Tag.cs" />
+    <Compile Include="Migrations\201801220428057_InitialProject.cs" />
+    <Compile Include="Migrations\201801220428057_InitialProject.Designer.cs">
+      <DependentUpon>201801220428057_InitialProject.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\AccountEditByAdmin.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\PagedList.css" />
+    <EmbeddedResource Include="Migrations\201801220428057_InitialProject.resx">
+      <DependentUpon>201801220428057_InitialProject.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
